# BICA

./: .travis.yml  README.md
bica/: CMakeLists.txt  package.xml  setup.py
bica/include/bica/: Activation.h  Component.h  Component.hpp  Dependency.h  HfsmComponent.h  Utils.hpp
bica/src/: Activation.cpp  Component.cpp  Dependency.cpp  HfsmComponent.cpp  component_A_node.cpp  component_B_node.cpp  component_C_node.cpp  component_D_node.cpp  launcher.cpp
bica/src/bica/: Component.cpp  bica.py
bica/test/: CMakeLists.txt
bica/test/unit/: CMakeLists.txt  bica_test.cpp
bica_behavior_tree/: CMakeLists.txt  package.xml
bica_behavior_tree/include/bica_behavior_tree/: BicaTree.hpp
bica_behavior_tree/include/bica_behavior_tree/action/: activation_action.hpp
bica_behavior_tree/include/bica_behavior_tree/control/: activation_sequence.hpp
bica_behavior_tree/plugins/action/: activation_action.cpp
bica_behavior_tree/plugins/control/: activation_sequence.cpp
bica_examples/: CMakeLists.txt  package.xml
bica_examples/graph/: CMakeLists.txt  node_A_graph.cpp  node_B_graph.cpp  node_C_graph.cpp  node_D_graph.cpp
bica_examples/launch/: bica_patrol_example_launch.py  follow_ball.launch  follow_ballnet.launch  follow_global_ballnet.launch  nodes_cpp_launch.py  planning_example.launch  planning_example_elements.launch  sim_robocup.launch
bica_examples/nodes_bt/: CMakeLists.txt  node_A_bt.cpp  node_A_tree.xml  node_B_bt.cpp  node_C_bt.cpp  node_C_tree.xml  node_D_bt.cpp
bica_examples/nodes_cpp/: CMakeLists.txt  node_A.cpp  node_B.cpp  node_C.cpp  node_D.cpp
bica_examples/planning/: CMakeLists.txt  bica_patrolling_controller_node.cpp
bica_examples/planning/actions/: move_action_node.cpp  patrol_action_node.cpp
bica_examples/planning/components/: node_A_planning.cpp  node_B_planning.cpp  node_C_planning.cpp  node_D_planning.cpp
bica_examples/scripts/: node_P.py
bica_examples/src/HFSM/: test_M.bica  test_M.cpp  test_M.h  test_M_impl.cpp
bica_examples/src/follow_ball/: ball_detector_node.cpp  follower_node.cpp
bica_examples/src/graph/: graph_client_A_node.cpp  graph_client_B_node.cpp  graph_client_node.cpp  graph_server_node.cpp
bica_examples/src/graph/follow_ball/: ball_detector_node.cpp  ball_follower_node.cpp
bica_examples/src/graph/follow_ballnet/: ball_net_follower.h  ballnet_follower_node.cpp  blue_net_detector_node.cpp  yellow_net_detector_node.cpp
bica_examples/src/graph/follow_global_ballnet/: ball_global_detector_node.cpp  ball_net_follower.bica  ball_net_follower.cpp  ballnet_global_follower_node.cpp  blue_net_global_detector_node.cpp  yellow_net_global_detector_node.cpp
bica_examples/src/nodes_cpp/: node_A.cpp  node_B.cpp  node_C.cpp  node_D.cpp
bica_examples/src/planning/: planning_example_elements_node.cpp  planning_example_node.cpp
bica_examples/src/planning/domains_and_problems/: domain_simple.pddl
bica_examples/src/planning/hri/: Approach.cpp  Approach.h  Talk.cpp  Talk.h
bica_examples/src/planning/hri/pddl/: actions.pddl  predicates.pddl  types.pddl
bica_examples/src/planning/navigate/: Move.cpp  Move.h
bica_examples/src/planning/navigate/pddl/: actions.pddl  predicates.pddl  types.pddl
bica_graph/: CMakeLists.txt  README.md  package.xml
bica_graph/include/bica_graph/: Graph.hpp  GraphInterface.hpp  GraphNode.hpp  Singleton.h  TypedGraphNode.hpp  Types.hpp  conversions.h  edge.h  exceptions.h  graph.h  graph_client.h  graph_handler.h  graph_listener.h  graph_publisher.h  graph_server.h  macros.h  node.h  relation.h  tf_relation.h
bica_graph/launch/: bica_graph_master.launch
bica_graph/src/: graph_kms_extractor_node.cpp  graph_master_node.cpp  graph_terminal.cpp
bica_graph/src/bica_graph/: Graph.cpp  GraphNode.cpp  TypedGraphNode.cpp  Types.cpp  conversions.cpp  edge.cpp  graph.cpp  graph_client.cpp  graph_handler.cpp  graph_listener.cpp  graph_publisher.cpp  graph_server.cpp  node.cpp  relation.cpp  tf_relation.cpp
bica_graph/test/: CMakeLists.txt  bica_graph_test.cpp  kms_extractor_params.yaml  test_bica_graph.cpp  test_bica_graph.test  test_bica_graph_clientserver.cpp  test_graph_A_node.cpp  test_graph_B_node.cpp  test_graph_C_node.cpp  test_launck_kms_extractor.launch  test_publisher_node.cpp  test_subscriber_node.cpp
bica_gui/: CMakeLists.txt  package.xml  plugin.xml  setup.py
bica_gui/include/bica_gui/: Component.h  Dependency.h  HFSM.h  HFSMScene.h  State.h  Transition.h  vicode.h
bica_gui/resources/: Builder.properties  ComponentAct.xcf  ComponentCodeFrame.properties  StateCodeFrame.properties  TransitionCodeFrame.properties  patternSrc.cpp  patternSrc.h
bica_gui/src/bica_gui/: Component.cpp  Dependency.cpp  HFSM.cpp  HFSMScene.cpp  State.cpp  Transition.cpp  vicode.cpp  vicode.ui
bica_msgs/: CMakeLists.txt  package.xml
bica_msgs/msg/: Edge.msg  Graph.msg  GraphUpdate.msg  Node.msg  Relation.msg  TFRelation.msg
bica_msgs/srv/: ActivateComponent.srv  DeactivateComponent.srv  UpdateGraph.srv
bica_planning/: CMakeLists.txt  README.md  package.xml
bica_planning/common/: plan.pddl  problem.pddl
bica_planning/include/bica_planning/: Action.h  Executor.h  KMSClient.h
bica_planning/launch/: demo.launch  planning_system.launch
bica_planning/pddl/: template.pddl
bica_planning/scripts/: pddl_builder.py
bica_planning/src/: Action.cpp  Executor.cpp  KMSClient.cpp
bica_rqt_graph/: CMakeLists.txt  mainpage.dox  package.xml  plugin.xml  setup.py
bica_rqt_graph/resource/: BicaGraph.ui
bica_rqt_graph/scripts/: bica_rqt_graph
bica_rqt_graph/src/bica_rqt_graph/: bica_graph.py  bica_graph_impl.py  bicagraph2_impl.py  dotcode.py  interactive_graphics_view.py  main.py
bica_rqt_graph/test/: dotcode_test.py
