<?xml version="1.0"?>
<package>
  <name>bica</name>
  <version>0.1.0</version>
  <description>The bica package</description>

  <maintainer email="fmrico@gmail.com">Francisco Martín Rico</maintainer>
  <license>BSD</license>
  <url type="website">http://intelligentrobotics.es/</url>
  <author email="fmrico@gmail.com">Francisco Martín Rico</author> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>roslint</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>

  </export>
</package>
