<?xml version="1.0"?>
<package format="2">
  <name>bica_examples</name>
  <version>0.0.0</version>
  <description>The bica_examples package</description>

  <maintainer email="fmrico@gmail.com">Francisco Martín Rico</maintainer>
  <license>BSD</license>
  <url type="website">http://intelligentrobotics.es/</url>
  <author email="fmrico@gmail.com">Francisco Martín Rico</author> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>bica</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>bica_graph</build_depend>
  <build_depend>bica_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>tf2_msgs</build_depend>
  <build_depend>tf2_sensor_msgs</build_depend>

  <build_export_depend>bica</build_export_depend>
  <build_export_depend>bica_graph</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>bica_msgs</build_export_depend>
  <build_export_depend>image_transport</build_export_depend>
  <build_export_depend>cv_bridge</build_export_depend>
  <build_export_depend>pcl_ros</build_export_depend>
  <build_export_depend>tf2</build_export_depend>
  <build_export_depend>tf2_ros</build_export_depend>
  <build_export_depend>tf2_msgs</build_export_depend>
  <build_export_depend>tf2_sensor_msgs</build_export_depend>

  <exec_depend>bica</exec_depend>
  <exec_depend>bica_graph</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>bica_msgs</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf2_msgs</exec_depend>
  <exec_depend>tf2_sensor_msgs</exec_depend>    
  <export>

  </export>
</package>
