<?xml version="1.0"?>
<package>
  <name>bica_gui</name>
  <version>0.1.0</version>
  <description>The bica_gui package</description>

  <maintainer email="fmrico@gmail.com">Francisco Martín Rico</maintainer>
  <license>BSD</license>
  <url type="website">http://intelligentrobotics.es/</url>
  <author email="fmrico@gmail.com">Francisco Martín Rico</author> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslint</build_depend>
  <build_depend>rqt_gui</build_depend>
  <build_depend>rqt_gui_cpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>roslint</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rqt_gui</run_depend>
  <run_depend>rqt_gui_cpp</run_depend>
  <run_depend>std_msgs</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>
