<?xml version="1.0"?>
<package format="1">
  <name>bica_planning</name>
  <version>0.0.1</version>
  <description>The bica_planning package. Package for helping to communicate with ROSPlan. Here the actions are implemented</description>

	<maintainer email="fmrico@gmail.com">Francisco Martín Rico</maintainer>
  <license>BSD</license>

  <author email="fmrico@gmail.com">Francisco Martín Rico</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>diagnostic_msgs</build_depend>
  <build_depend>rosplan_dispatch_msgs</build_depend>
  <build_depend>rosplan_knowledge_msgs</build_depend>
  <build_depend>rosplan_planning_system</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>bica</build_depend>
  <build_depend>roslint</build_depend>

	<run_depend>rospy</run_depend>
	<run_depend>roscpp</run_depend>
	<run_depend>std_msgs</run_depend>
	<run_depend>std_srvs</run_depend>
	<run_depend>diagnostic_msgs</run_depend>
	<run_depend>rosplan_dispatch_msgs</run_depend>
	<run_depend>rosplan_knowledge_msgs</run_depend>
	<run_depend>rosplan_planning_system</run_depend>
	<run_depend>actionlib</run_depend>
  <run_depend>bica</run_depend>


  <export>
  </export>
</package>
