<package>
  <name>bica_rqt_graph</name>
  <version>0.1.0</version>
  <description>bica_rqt_graph provides a GUI plugin for visualizing the BICA
      computation graph.
  </description>
  <maintainer email="fmrico@gmail.com">Francisco Martín Rico</maintainer>

  <license>BSD</license>

  <author>Francisco Martín</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend version_gte="0.2.19">python_qt_binding</run_depend>
  <run_depend>python-rospkg</run_depend>
  <run_depend>qt_dotgraph</run_depend>
  <run_depend>bica_graph</run_depend>
  <run_depend>bica_msgs</run_depend>
  <run_depend>rqt_gui</run_depend>
  <run_depend>rqt_gui_py</run_depend>

  <export>
    <architecture_independent/>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>
