<package format="2">
  <name>bica_rqt_graph</name>
  <version>0.2.0</version>
  <description>bica_rqt_graph provides a GUI plugin for visualizing the BICA
      graph.<br />
  </description>
  <maintainer email="fmrico@gmail.com">Francisco Martin</maintainer>

  <license>BSD</license>

  <author>Francisco Martin</author>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>python_qt_binding</exec_depend>
  <exec_depend>qt_dotgraph</exec_depend>
  <exec_depend>rqt_gui</exec_depend>
  <exec_depend>rqt_gui_py</exec_depend>
  <exec_depend>bica_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>tf2_py</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  
  <export>
    <build_type>ament_python</build_type>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>
